# Nya-engine

./: .gitignore  CMakeLists.txt  README.md
extensions/: bullet.h  ftp_resources_provider.cpp  ftp_resources_provider.h  lua_binding.cpp  lua_binding.h  nya_main.cpp  openh264.cpp  openh264.h  smb_resources_provider.cpp  smb_resources_provider.h  system_openvr.cpp  system_openvr.h  texture_il.cpp  texture_il.h  texture_libjpeg.cpp  texture_libjpeg.h  texture_libpng.cpp  texture_libpng.h  texture_libwebp.cpp  texture_libwebp.h  zip_resources_provider.cpp  zip_resources_provider.h
formats/: dds.cpp  dds.h  ktx.cpp  ktx.h  math_expr_parser.cpp  math_expr_parser.h  meta.cpp  meta.h  nan.cpp  nan.h  nms.cpp  nms.h  string_convert.cpp  string_convert.h  text_parser.cpp  text_parser.h  tga.cpp  tga.h
math/: aabb.cpp  aabb.h  angle.h  bezier.cpp  bezier.h  constants.cpp  constants.h  frustum.cpp  frustum.h  matrix.cpp  matrix.h  quadtree.cpp  quadtree.h  quaternion.cpp  quaternion.h  scalar.h  simd.h  vector.h
memory/: align_alloc.h  indexed_map.h  invalid_object.h  lru.h  memory.cpp  memory.h  memory_reader.h  memory_writer.h  mutex.cpp  mutex.h  non_copyable.h  optional.h  pool.h  shared_ptr.h  tag_list.h  tile_map.h  tmp_buffer.cpp  tmp_buffer.h
render/: animation.cpp  animation.h  bitmap.cpp  bitmap.h  debug_draw.cpp  debug_draw.h  fbo.cpp  fbo.h  render.cpp  render.h  render_api.h  render_buffered.cpp  render_buffered.h  render_directx11.cpp  render_directx11.h  render_metal.cpp  render_metal.h  render_objects.h  render_opengl.cpp  render_opengl.h  render_opengl_ext.h  (+15 more)
(+138 files in other folders)
